[UPDATE/BUGFIX] Some text updates + side panel bug fix.
~1hr
> Updated the text for "About Us" and Welcome.
> Fixed a bug where the invisible side panels was blocking click / touch events.
> Changed the style of the horizontal line to be more subtle and have a bit more depth.

--- a/css/new-styles.css
+++ b/css/new-styles.css
@@ -46,6 +46,12 @@ html, body {
   background: rgb(21, 21, 26);
 }
 
+hr {
+  border: none;
+  border-top: 1px solid rgb(180, 180, 180);
+  border-bottom: 1px solid white;
+}
+
 header {
   width: 100%;
   height: 86vh;
